[package]
name = "forza-telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.158", features = ["derive"] }
csv = "1.2"
paris = { version = "1.5", features = ["macros"] }
clap = { version = "4.1.13", features = ["derive"] }
